Bug 254162 - Todos in the list are not sorted in any way. (perhaps priority?)
Summary: Todos in the list are not sorted in any way. (perhaps priority?)
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: tasks (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-14 15:40 UTC by Ludwig Reiter
Modified: 2011-01-19 16:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-10-14 15:40:08 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version:20101008.1183810-1maemo1.1182955


Reproducible: Always

Steps to Reproduce:
1. Enter some odos with different priority.
2. Try to get the highst prio up.

Actual Results:  
doesn't work, there is no way to get the oos list ordered by priority

Expected Results:  
This should be possible.
Comment 1 Sergio Martins 2010-11-18 17:02:39 UTC
SVN commit 1198474 by smartins:

Fix sorting.

Doesn't make sense to sort by completion. A to-do 90% completed can be more urgent than one 10% completed.

Sort by priority instead.
BUG: 254162

 M  +26 -12    tasklistproxy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198474
Comment 2 Ludwig Reiter 2010-12-01 15:03:38 UTC
The sorting by priority doesn't work if the priority of a task is edited.

Test:
0 Create some task with different priority
1 Select a task
2 click on the edit button
3 change the priority so the task would be at a different place in the list.
4 go back to list
=> The task stays at the same place in the list.
Comment 3 Tobias Koenig 2010-12-15 16:59:33 UTC
SVN commit 1206722 by tokoe:

Fix the lasting update issues by using dynamic model repopulation.

BUG: 254162
BUG: 259841


 M  +1 -0      mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206722
Comment 4 Ludwig Reiter 2011-01-19 16:30:42 UTC
Windows CE Task Touch 2011-01-16 git-4d1bc61
Test of the description: passed.
Closed.