Fix sorting.

Doesn't make sense to sort by completion. A to-do 90% completed can be more urgent than one 10% completed.

Sort by priority instead.
BUG: 254162

svn path=/trunk/KDE/kdepim/mobile/; revision=1198474